--- a/dynamic-component-navbar/dynamic-component/src/app/app.component.html
+++ b/dynamic-component-navbar/dynamic-component/src/app/app.component.html
@@ -1,4 +1,21 @@
-<h1>
-  {{title}}
-</h1>
-<ng-template myHost></ng-template>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active" *ngFor="let thing of mocks">
+        <p>{{thing | json }} </p>
+      </li>
+      <li class="nav-item dropdown">
+        Add a satellite!
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item">Action</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+</nav>
